--- a/index.html
+++ b/index.html
@@ -14,8 +14,65 @@
 
     <div class="container">
         <h4>CASE STUDY
+            
         <hr>
         <ol>
+            <div class="text_images_and_result bob">
+                <li>
+                    <b>Test Image - </b><img src="phone.jpg" class="img-responsive">
+                </li>
+                <h5>Output on <b>Microsoft Azure</b> -
+                    <span>Phone</span>
+                </h5>
+                <h5>Output on <b>Mobilenet Model </b> -
+                    <span>Mobile phone</span>
+                </h5>
+
+                <div class="mini_result">
+                    <h4>Result - </h4>
+                    <hr>
+                </div>
+            </div>
+            <hr>
+
+            <div class="text_images_and_result bob">
+                <li>
+                    <b>Test Image - </b><img src="download.jpg" class="img-responsive">
+                </li>
+                <h5>Output on <b>Microsoft Azure</b> -
+                    <span>Books</span>
+                </h5>
+                <h5>Output on <b>Mobilenet Model </b> -
+                    <span>Books</span>
+                </h5>
+
+                <div class="mini_result">
+                    <h4>Result - </h4>
+                    <hr>
+                </div>
+
+            </div>
+            <hr>
+
+            <div class="text_images_and_result bob">
+                <li>
+                    <b>Test Image - </b><img src="shoes.jpg" class="img-responsive">
+                </li>
+                <h5>Output on <b>Microsoft Azure</b> -
+                    <span>Shoes</span>
+                </h5>
+                <h5>Output on <b>Mobilenet Model </b> -
+                    <span>Sport shoes</span>
+                </h5>
+
+                <div class="mini_result">
+                    <h4>Result - </h4>
+                    <hr>
+                </div>
+
+            </div>
+            <hr>
+
             <div class="text_images_and_result bob">
                 <li>
                     <b>Test Image - </b><img src="images.jpg" class="img-responsive">
@@ -24,19 +81,23 @@
                     <span>Bottle</span>
                 </h5>
                 <h5>Output on <b>Mobilenet Model </b> -
-                    <span>Phone</span>
+                    <span>Water bottle</span>
                 </h5>
 
                 <div class="mini_result">
                     <h4>Result - </h4>
                     <hr>
-                    <h4></h4>
+                </div>
+
+            </div>
+            <hr>
+
                 </div>
 
             </div>
 
-    </div>
-
+        </ol>
+        
 </body>
 
 </html>
